--- a/src/patternfly/components/Menu/menu-item-action.hbs
+++ b/src/patternfly/components/Menu/menu-item-action.hbs
@@ -8,11 +8,13 @@
   {{#if menu-item-action--attribute}}
     {{{menu-item-action--attribute}}}
   {{/if}}>
-  {{#> button button--role="menuitem" button--IsPlain=true button--IsDisabled=menu-list-item--IsDisabled button--IsAriaDisabled=menu-list-item--IsAriaDisabled}}
+  {{#> button button--role="menuitem" button--IsPlain=true button--IsDisabled=menu-item--IsDisabled button--IsAriaDisabled=menu-list-item--IsAriaDisabled}}
+    {{!-- TODO: {{#> button-icon}} --}}
     {{#ifAny menu-item-action--IsFavorite menu-item-action--IsFavorited}}
       <i class="fas fa-star" aria-hidden="true"></i>
     {{else if @partial-block}}
       {{> @partial-block}}
     {{/ifAny}}
+    {{!-- TODO: {{/button-icon}} --}}
   {{/button}}
 </div>
