--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -60,7 +60,9 @@
   {{#if button--IsInProgress}}
     {{> button-progress}}
   {{/if}}
-  {{#if button--HasIcon}}
+  {{#if button--icon}}
+    <i class="fas fa-{{button--icon}}" aria-hidden="true"></i>
+  {{else if button--HasIcon}}
     {{#> button-icon button-icon--modifier="pf-m-start"}}
       <i class="fas fa-plus-circle" aria-hidden="true"></i>
     {{/button-icon}}
