--- a/src/patternfly/components/ProgressStepper/progress-stepper.scss
+++ b/src/patternfly/components/ProgressStepper/progress-stepper.scss
@@ -57,7 +57,8 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
 }
 
 // Progress stepper is vertically oriented by default
-.#{$progress-stepper} {
+:where(:root),
+:where(.#{$progress-stepper}) {
   // Vertical - these are the default settings
   --#{$progress-stepper}--m-vertical--GridAutoFlow: row;
   --#{$progress-stepper}--m-vertical--GridTemplateColumns: auto 1fr;
@@ -65,19 +66,19 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   --#{$progress-stepper}--m-vertical__step-connector--before--Left: calc(var(--#{$progress-stepper}__step-icon--Width) / 2);
   --#{$progress-stepper}--m-vertical__step-connector--before--Width: auto;
   --#{$progress-stepper}--m-vertical__step-connector--before--Height: 100%;
-  --#{$progress-stepper}--m-vertical__step-connector--before--BorderRightWidth: var(--#{$pf-global}--BorderWidth--md);
-  --#{$progress-stepper}--m-vertical__step-connector--before--BorderRightColor: var(--#{$pf-global}--BorderColor--100);
+  --#{$progress-stepper}--m-vertical__step-connector--before--BorderRightWidth: var(--pf-t--global--border--width--box--default);
+  --#{$progress-stepper}--m-vertical__step-connector--before--BorderRightColor: var(--pf-t--global--border--color--default);
   --#{$progress-stepper}--m-vertical__step-connector--before--BorderBottomWidth: 0;
   --#{$progress-stepper}--m-vertical__step-connector--before--BorderBottomColor: transparent;
   --#{$progress-stepper}--m-vertical__step-connector--before--Transform: translateX(-50%);
-  --#{$progress-stepper}--m-vertical__step-main--MarginTop: var(--#{$pf-global}--spacer--xs);
+  --#{$progress-stepper}--m-vertical__step-main--MarginTop: 0px; // needs px for calc
   --#{$progress-stepper}--m-vertical__step-main--MarginRight: 0;
-  --#{$progress-stepper}--m-vertical__step-main--MarginBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$progress-stepper}--m-vertical__step-main--MarginLeft: var(--#{$pf-global}--spacer--xs);
+  --#{$progress-stepper}--m-vertical__step-main--MarginBottom: var(--pf-t--global--spacer--xl);
+  --#{$progress-stepper}--m-vertical__step-main--MarginLeft: var(--pf-t--global--spacer--sm);
 
   // Compact, vertical
   --#{$progress-stepper}--m-vertical--m-compact--GridTemplateColumns: 1fr;
-  --#{$progress-stepper}--m-vertical--m-compact__step-connector--PaddingBottom: var(--#{$pf-global}--spacer--sm);
+  --#{$progress-stepper}--m-vertical--m-compact__step-connector--PaddingBottom: var(--pf-t--global--spacer--sm);
   --#{$progress-stepper}--m-vertical--m-compact__step-connector--GridRow: auto;
   --#{$progress-stepper}--m-vertical--m-compact__step-main--MarginTop: 0;
   --#{$progress-stepper}--m-vertical--m-compact__step-main--MarginRight: 0;
@@ -96,11 +97,11 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   --#{$progress-stepper}--m-horizontal__step-connector--before--Height: auto;
   --#{$progress-stepper}--m-horizontal__step-connector--before--BorderRightWidth: 0;
   --#{$progress-stepper}--m-horizontal__step-connector--before--BorderRightColor: unset;
-  --#{$progress-stepper}--m-horizontal__step-connector--before--BorderBottomWidth: var(--#{$pf-global}--BorderWidth--md);
-  --#{$progress-stepper}--m-horizontal__step-connector--before--BorderBottomColor: var(--#{$pf-global}--BorderColor--100);
+  --#{$progress-stepper}--m-horizontal__step-connector--before--BorderBottomWidth: var(--pf-t--global--border--width--divider--default);
+  --#{$progress-stepper}--m-horizontal__step-connector--before--BorderBottomColor: var(--pf-t--global--border--color--default);
   --#{$progress-stepper}--m-horizontal__step-connector--before--Transform: translateY(-50%);
-  --#{$progress-stepper}--m-horizontal__step-main--MarginTop: var(--#{$pf-global}--spacer--sm);
-  --#{$progress-stepper}--m-horizontal__step-main--MarginRight: var(--#{$pf-global}--spacer--sm);
+  --#{$progress-stepper}--m-horizontal__step-main--MarginTop: var(--pf-t--global--spacer--sm);
+  --#{$progress-stepper}--m-horizontal__step-main--MarginRight: var(--pf-t--global--spacer--sm);
   --#{$progress-stepper}--m-horizontal__step-main--MarginBottom: 0;
   --#{$progress-stepper}--m-horizontal__step-main--MarginLeft: 0;
 
@@ -112,12 +113,12 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   // Compact
   --#{$progress-stepper}--m-compact--GridAutoFlow: row;
   --#{$progress-stepper}--m-compact__step-main--MarginTop: 0;
-  --#{$progress-stepper}--m-compact__step-main--MarginBottom: var(--#{$pf-global}--spacer--sm);
+  --#{$progress-stepper}--m-compact__step-main--MarginBottom: var(--pf-t--global--spacer--sm);
   --#{$progress-stepper}--m-compact__step-connector--MinWidth: #{pf-size-prem(28px)};
   --#{$progress-stepper}--m-compact__step-icon--Width: #{pf-size-prem(18px)};
-  --#{$progress-stepper}--m-compact__step-icon--FontSize: var(--#{$pf-global}--icon--FontSize--sm);
-  --#{$progress-stepper}--m-compact__step-title--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$progress-stepper}--m-compact__step-title--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+  --#{$progress-stepper}--m-compact__step-icon--FontSize: var(--pf-t--global--icon--size--body--sm);
+  --#{$progress-stepper}--m-compact__step-title--FontSize: var(--pf-t--global--font--size--body--lg);
+  --#{$progress-stepper}--m-compact__step-title--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$progress-stepper}--m-compact__pficon--MarginTop: 2px;
   --#{$progress-stepper}--m-compact__fa-exclamation-triangle--MarginTop: -3px;
 
@@ -125,8 +126,8 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   --#{$progress-stepper}--m-center__step-connector--before--Left: 50%;
   --#{$progress-stepper}--m-center--GridTemplateColumns: 1fr;
   --#{$progress-stepper}--m-center__step-connector--JustifyContent: center;
-  --#{$progress-stepper}--m-center__step-main--MarginRight: var(--#{$pf-global}--spacer--xs);
-  --#{$progress-stepper}--m-center__step-main--MarginLeft: var(--#{$pf-global}--spacer--xs);
+  --#{$progress-stepper}--m-center__step-main--MarginRight: var(--pf-t--global--spacer--xs);
+  --#{$progress-stepper}--m-center__step-main--MarginLeft: var(--pf-t--global--spacer--xs);
   --#{$progress-stepper}--m-center__step-main--TextAlign: center;
   --#{$progress-stepper}--m-center__step-description--MarginRight: 0;
   --#{$progress-stepper}--m-center__step-description--MarginLeft: 0;
@@ -138,49 +139,50 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   --#{$progress-stepper}__step-connector--JustifyContent: flex-start;
 
   // Step icon variables
-  --#{$progress-stepper}__step-icon--ZIndex: var(--#{$pf-global}--ZIndex--xs);
-  --#{$progress-stepper}__step-icon--Width: #{pf-size-prem(28px)};
+  --#{$progress-stepper}__step-icon--ZIndex: var(--pf-t--global--Zindex--xs);
+  --#{$progress-stepper}__step-icon--Width: #{pf-size-prem(24px)};
   --#{$progress-stepper}__step-icon--Height: var(--#{$progress-stepper}__step-icon--Width);
-  --#{$progress-stepper}__step-icon--FontSize: var(--#{$pf-global}--icon--FontSize--md);
-  --#{$progress-stepper}__step-icon--Color: var(--#{$pf-global}--Color--100);
-  --#{$progress-stepper}__step-icon--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-200);
-  --#{$progress-stepper}__step-icon--BorderWidth: var(--#{$pf-global}--BorderWidth--md);
-  --#{$progress-stepper}__step-icon--BorderColor: var(--#{$pf-global}--BorderColor--100);
+  --#{$progress-stepper}__step-icon--FontSize: var(--pf-t--global--icon--size--body--default);
+  --#{$progress-stepper}__step-icon--Color: var(--pf-t--global--icon--color--regular);
+  --#{$progress-stepper}__step-icon--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+  --#{$progress-stepper}__step-icon--BorderWidth: var(--pf-t--global--border--width--box--default);
+  --#{$progress-stepper}__step-icon--BorderColor: var(--pf-t--global--border--color--default);
+  --#{$progress-stepper}__step--m-current__step-icon--Color: var(--pf-t--global--icon--color--brand--default);
+  --#{$progress-stepper}__step--m-info__step-icon--Color: var(--pf-t--global--icon--color--status--info--default);
+  --#{$progress-stepper}__step--m-success__step-icon--Color: var(--pf-t--global--icon--color--status--success--default);
+  --#{$progress-stepper}__step--m-warning__step-icon--Color: var(--pf-t--global--icon--color--status--warning--default);
+  --#{$progress-stepper}__step--m-danger__step-icon--Color: var(--pf-t--global--icon--color--status--danger--default);
+  --#{$progress-stepper}__step--m-custom__step-icon--Color: var(--pf-t--global--icon--color--status--custom--default);
 
   // Icon adjustments to fix differences in alignment
   --#{$progress-stepper}__pficon--MarginTop: 3px;
-  --#{$progress-stepper}__fa-exclamation-triangle--MarginTop: -5px;
+  --#{$progress-stepper}__fa-exclamation-triangle--MarginTop: -2px;
 
   // Step Title variables
-  --#{$progress-stepper}__step-title--Color: var(--#{$pf-global}--Color--100);
+  --#{$progress-stepper}__step-title--Color: var(--pf-t--global--text--color--regular);
   --#{$progress-stepper}__step-title--TextAlign: start;
-  --#{$progress-stepper}__step-title--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$progress-stepper}__step-title--FontWeight: var(--#{$pf-global}--FontWeight--normal);
-  --#{$progress-stepper}__step--m-current__step-title--FontWeight: var(--#{$pf-global}--FontWeight--bold);
-  --#{$progress-stepper}__step--m-current__step-title--Color: var(--#{$pf-global}--Color--100);
-  --#{$progress-stepper}__step--m-pending__step-title--Color: var(--#{$pf-global}--Color--200);
-  --#{$progress-stepper}__step--m-danger__step-title--Color: var(--#{$pf-global}--danger-color--100);
+  --#{$progress-stepper}__step-title--FontSize: var(--pf-t--global--font--size--body--lg);
+  --#{$progress-stepper}__step-title--FontWeight: var(--pf-t--global--font--weight--body);
+  --#{$progress-stepper}__step--m-current__step-title--FontWeight: var(--pf-t--global--font--weight--body--bold);
+  --#{$progress-stepper}__step--m-current__step-title--Color: var(--pf-t--global--text--color--regular);
+  --#{$progress-stepper}__step--m-pending__step-title--Color: var(--pf-t--global--text--color--subtle);
+  --#{$progress-stepper}__step--m-danger__step-title--Color: var(--pf-t--global--text--color--status--danger--default);
 
   // Help text variables for the step title
-  --#{$progress-stepper}__step-title--m-help-text--TextDecorationColor: var(--#{$pf-global}--BorderColor--200);
-  --#{$progress-stepper}__step-title--m-help-text--TextDecorationThickness: var(--#{$pf-global}--BorderWidth--sm);
+  --#{$progress-stepper}__step-title--m-help-text--PaddingInlineStart: 0;
+  --#{$progress-stepper}__step-title--m-help-text--PaddingInlineEnd: 0;
+  --#{$progress-stepper}__step-title--m-help-text--TextDecorationColor: currentcolor;
+  --#{$progress-stepper}__step-title--m-help-text--TextDecorationThickness: var(--pf-t--global--link--text-decoration);
   --#{$progress-stepper}__step-title--m-help-text--TextUnderlineOffset: #{pf-size-prem(4px)};
-  --#{$progress-stepper}__step-title--m-help-text--hover--TextDecorationColor: var(--#{$pf-global}--Color--100);
-  --#{$progress-stepper}__step-title--m-help-text--focus--TextDecorationColor: var(--#{$pf-global}--Color--100);
-  --#{$progress-stepper}__step-title--m-help-text--hover--Color: var(--#{$pf-global}--Color--100);
-  --#{$progress-stepper}__step-title--m-help-text--focus--Color: var(--#{$pf-global}--Color--100);
+  --#{$progress-stepper}__step-title--m-help-text--hover--Color: var(--pf-t--global--text--color--brand--hover);
 
   // Help text variables the step title for failure state
-  --#{$progress-stepper}__step--m-danger__step-title--m-help-text--hover--Color: var(--#{$pf-global}--danger-color--200);
-  --#{$progress-stepper}__step--m-danger__step-title--m-help-text--focus--Color: var(--#{$pf-global}--danger-color--200);
-  --#{$progress-stepper}__step--m-danger__step-title--m-help-text--TextDecorationColor: var(--#{$pf-global}--danger-color--100);
-  --#{$progress-stepper}__step--m-danger__step-title--m-help-text--hover--TextDecorationColor: var(--#{$pf-global}--danger-color--200);
-  --#{$progress-stepper}__step--m-danger__step-title--m-help-text--focus--TextDecorationColor: var(--#{$pf-global}--danger-color--200);
+  --#{$progress-stepper}__step--m-danger__step-title--m-help-text--hover--Color: var(--pf-t--global--text--color--status--danger--hover);
 
   // Step Description variables
-  --#{$progress-stepper}__step-description--MarginTop: var(--#{$pf-global}--spacer--xs);
-  --#{$progress-stepper}__step-description--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$progress-stepper}__step-description--Color: var(--#{$pf-global}--Color--200);
+  --#{$progress-stepper}__step-description--MarginTop: var(--pf-t--global--spacer--xs);
+  --#{$progress-stepper}__step-description--FontSize: var(--pf-t--global--font--size--body--sm);
+  --#{$progress-stepper}__step-description--Color: var(--pf-t--global--text--color--subtle);
   --#{$progress-stepper}__step-description--TextAlign: start;
 
   // Vertical by default
@@ -190,7 +192,9 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   @media screen and (min-width: $pf-v5-global--breakpoint--md) {
     @include pf-v5-c-progress-stepper--m-horizontal;
   }
+}
 
+.#{$progress-stepper} {
   position: relative;
   display: grid;
   grid-template-rows: var(--#{$progress-stepper}--GridTemplateRows);
@@ -265,12 +269,10 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
     }
 
     // For this compact variant only, move the main content for the current step to above the icons
-    // stylelint-disable
     .#{$progress-stepper}__step.pf-m-current .#{$progress-stepper}__step-main {
-        grid-column: 1/-1;
         grid-row: 1/2;
+        grid-column: 1/-1;
       }
-    // stylelint-enable
 
     .#{$progress-stepper}__step-description {
       display: none;
@@ -286,6 +288,7 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   &.pf-m-current {
     --#{$progress-stepper}__step-title--FontWeight: var(--#{$progress-stepper}__step--m-current__step-title--FontWeight);
     --#{$progress-stepper}__step-title--Color: var(--#{$progress-stepper}__step--m-current__step-title--Color);
+    --#{$progress-stepper}__step-icon--Color: var(--#{$progress-stepper}__step--m-current__step-icon--Color);
   }
 
   &.pf-m-pending {
@@ -293,27 +296,27 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   }
 
   &.pf-m-success {
-    --#{$progress-stepper}__step-icon--Color: var(--#{$pf-global}--success-color--100);
+    --#{$progress-stepper}__step-icon--Color: var(--#{$progress-stepper}__step--m-success__step-icon--Color);
   }
 
   &.pf-m-danger {
-    --#{$progress-stepper}__step-icon--Color: var(--#{$pf-global}--danger-color--100);
+    --#{$progress-stepper}__step-icon--Color: var(--#{$progress-stepper}__step--m-danger__step-icon--Color);
     --#{$progress-stepper}__step-title--Color: var(--#{$progress-stepper}__step--m-danger__step-title--Color);
 
     // Help text variables for failure state
     --#{$progress-stepper}__step-title--m-help-text--hover--Color: var(--#{$progress-stepper}__step--m-danger__step-title--m-help-text--hover--Color);
-    --#{$progress-stepper}__step-title--m-help-text--focus--Color: var(--#{$progress-stepper}__step--m-danger__step-title--m-help-text--focus--Color);
-    --#{$progress-stepper}__step-title--m-help-text--TextDecorationColor: var(--#{$progress-stepper}__step--m-danger__step-title--m-help-text--TextDecorationColor);
-    --#{$progress-stepper}__step-title--m-help-text--hover--TextDecorationColor: var(--#{$progress-stepper}__step--m-danger__step-title--m-help-text--hover--TextDecorationColor);
-    --#{$progress-stepper}__step-title--m-help-text--focus--TextDecorationColor: var(--#{$progress-stepper}__step--m-danger__step-title--m-help-text--focus--TextDecorationColor);
   }
 
   &.pf-m-warning {
-    --#{$progress-stepper}__step-icon--Color: var(--#{$pf-global}--warning-color--100);
+    --#{$progress-stepper}__step-icon--Color: var(--#{$progress-stepper}__step--m-warning__step-icon--Color);
   }
 
   &.pf-m-info {
-    --#{$progress-stepper}__step-icon--Color: var(--#{$pf-global}--info-color--100);
+    --#{$progress-stepper}__step-icon--Color: var(--#{$progress-stepper}__step--m-info__step-icon--Color);
+  }
+
+  &.pf-m-custom {
+    --#{$progress-stepper}__step-icon--Color: var(--#{$progress-stepper}__step--m-custom__step-icon--Color);
   }
 
   &:last-child {
@@ -347,7 +350,7 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   display: flex;
   align-items: center;
   justify-content: center;
-  width: var(--#{$progress-stepper}__step-icon--Width);
+  min-width: var(--#{$progress-stepper}__step-icon--Width);
   height: var(--#{$progress-stepper}__step-icon--Height);
   font-size: var(--#{$progress-stepper}__step-icon--FontSize);
   color: var(--#{$progress-stepper}__step-icon--Color);
@@ -399,6 +402,8 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
   border: 0;
 
   &.pf-m-help-text {
+    padding-inline-start: var(--#{$progress-stepper}__step-title--m-help-text--PaddingInlineStart);
+    padding-inline-end: var(--#{$progress-stepper}__step-title--m-help-text--PaddingInlineEnd);
     text-decoration: underline;
     text-decoration-thickness: var(--#{$progress-stepper}__step-title--m-help-text--TextDecorationThickness);
     text-decoration-style: dashed;
@@ -406,14 +411,9 @@ $pf-v5-c-progress-stepper--breakpoint-map: build-breakpoint-map();
     text-underline-offset: var(--#{$progress-stepper}__step-title--m-help-text--TextUnderlineOffset);
     cursor: pointer;
 
-    &:hover {
-      --#{$progress-stepper}__step-title--Color: var(--#{$progress-stepper}__step-title--m-help-text--hover--Color);
-      --#{$progress-stepper}__step-title--m-help-text--TextDecorationColor: var(--#{$progress-stepper}__step-title--m-help-text--hover--TextDecorationColor);
-    }
-
+    &:hover,
     &:focus {
-      --#{$progress-stepper}__step-title--Color: var(--#{$progress-stepper}__step-title--m-help-text--focus--Color);
-      --#{$progress-stepper}__step-title--m-help-text--TextDecorationColor: var(--#{$progress-stepper}__step-title--m-help-text--focus--TextDecorationColor);
+      --#{$progress-stepper}__step-title--Color: var(--#{$progress-stepper}__step-title--m-help-text--hover--Color);
     }
   }
 }
