--- a/src/patternfly/components/Menu/examples/Menu.css
+++ b/src/patternfly/components/Menu/examples/Menu.css
@@ -1,19 +1,11 @@
 [id^="ws-core-c-menu-with-flyout"],
 [id^="ws-core-c-menu-standard-menu-flyout-child"] {
   display: flex;
-  height: 400px;
+  height: 360px;
 }
 
-#ws-core-c-menu-with-flyout-menu-top {
-  align-items: flex-end;
-}
-
-#ws-core-c-menu-with-flyout-menu-left {
-  justify-content: flex-end;
-}
-
+#ws-core-c-menu-with-flyout-menu-left,
 #ws-core-c-menu-with-flyout-menu-left-top {
-  align-items: flex-end;
   justify-content: flex-end;
 }
 
