feat(action-list): added icon group variable update

--- a/src/patternfly/components/ActionList/action-list.scss
+++ b/src/patternfly/components/ActionList/action-list.scss
@@ -23,6 +23,8 @@
 
   // - Action list icons
   &.pf-m-icons {
+    --#{$action-list}__group--ColumnGap: var(--#{$action-list}--m-icons--ColumnGap);
+
     column-gap: var(--#{$action-list}--m-icons--ColumnGap); // update prop: val to prevent potential inheritance conflicts
   }
 }
