--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -235,9 +235,10 @@
 
   // Disabled
   --#{$button}--disabled--Color: var(--pf-t--global--text--color--on-disabled);
-  --#{$button}--disabled__icon--Color: var(--pf-t--global--icon--color--on-disabled);
+  --#{$button}--disabled--MixBlendMode: normal;
   --#{$button}--disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
   --#{$button}--disabled--BorderColor: transparent;
+  --#{$button}--disabled__icon--Color: var(--pf-t--global--icon--color--on-disabled);
 
   // Icons
   --#{$button}__icon--Color: var(--pf-t--global--icon--color--regular);
@@ -610,6 +611,7 @@
     --#{$badge}--m-unread--Color: var(--#{$button}--disabled__c-badge--Color);
     --#{$badge}--m-unread--BackgroundColor: var(--#{$button}--disabled__c-badge--BackgroundColor);
     --#{$button}--m-primary__c-badge--BorderWidth: 0;
+    --#{$button}--MixBlendMode: var(--#{$button}--disabled--MixBlendMode);
 
     color: var(--#{$button}--disabled--Color);
     background-color: var(--#{$button}--disabled--BackgroundColor);
